feat: Remove Nan row.

--- a/solution.ipynb
+++ b/solution.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "id": "30dc9473",
    "metadata": {},
    "outputs": [],
@@ -14,50 +14,373 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "id": "d354b959",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fecha-I      object\n",
+      "Vlo-I        object\n",
+      "Ori-I        object\n",
+      "Des-I        object\n",
+      "Emp-I        object\n",
+      "Fecha-O      object\n",
+      "Vlo-O        object\n",
+      "Ori-O        object\n",
+      "Des-O        object\n",
+      "Emp-O        object\n",
+      "DIA           int64\n",
+      "MES           int64\n",
+      "AÑO           int64\n",
+      "DIANOM       object\n",
+      "TIPOVUELO    object\n",
+      "OPERA        object\n",
+      "SIGLAORI     object\n",
+      "SIGLADES     object\n",
+      "dtype: object\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Admin\\AppData\\Local\\Temp\\ipykernel_6916\\3782388122.py:1: DtypeWarning: Columns (1,6) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\Admin\\AppData\\Local\\Temp\\ipykernel_6916\\3529720353.py:1: DtypeWarning: Columns (1,6) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  data = pd.read_csv(Path().joinpath('data', 'dataset_SCL.csv'))\n"
      ]
     },
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Fecha-I</th>\n",
+       "      <th>Vlo-I</th>\n",
+       "      <th>Ori-I</th>\n",
+       "      <th>Des-I</th>\n",
+       "      <th>Emp-I</th>\n",
+       "      <th>Fecha-O</th>\n",
+       "      <th>Vlo-O</th>\n",
+       "      <th>Ori-O</th>\n",
+       "      <th>Des-O</th>\n",
+       "      <th>Emp-O</th>\n",
+       "      <th>DIA</th>\n",
+       "      <th>MES</th>\n",
+       "      <th>AÑO</th>\n",
+       "      <th>DIANOM</th>\n",
+       "      <th>TIPOVUELO</th>\n",
+       "      <th>OPERA</th>\n",
+       "      <th>SIGLAORI</th>\n",
+       "      <th>SIGLADES</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2017-01-01 23:30:00</td>\n",
+       "      <td>226</td>\n",
+       "      <td>SCEL</td>\n",
+       "      <td>KMIA</td>\n",
+       "      <td>AAL</td>\n",
+       "      <td>2017-01-01 23:33:00</td>\n",
+       "      <td>226</td>\n",
+       "      <td>SCEL</td>\n",
+       "      <td>KMIA</td>\n",
+       "      <td>AAL</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>Domingo</td>\n",
+       "      <td>I</td>\n",
+       "      <td>American Airlines</td>\n",
+       "      <td>Santiago</td>\n",
+       "      <td>Miami</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2017-01-02 23:30:00</td>\n",
+       "      <td>226</td>\n",
+       "      <td>SCEL</td>\n",
+       "      <td>KMIA</td>\n",
+       "      <td>AAL</td>\n",
+       "      <td>2017-01-02 23:39:00</td>\n",
+       "      <td>226</td>\n",
+       "      <td>SCEL</td>\n",
+       "      <td>KMIA</td>\n",
+       "      <td>AAL</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>Lunes</td>\n",
+       "      <td>I</td>\n",
+       "      <td>American Airlines</td>\n",
+       "      <td>Santiago</td>\n",
+       "      <td>Miami</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2017-01-03 23:30:00</td>\n",
+       "      <td>226</td>\n",
+       "      <td>SCEL</td>\n",
+       "      <td>KMIA</td>\n",
+       "      <td>AAL</td>\n",
+       "      <td>2017-01-03 23:39:00</td>\n",
+       "      <td>226</td>\n",
+       "      <td>SCEL</td>\n",
+       "      <td>KMIA</td>\n",
+       "      <td>AAL</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>Martes</td>\n",
+       "      <td>I</td>\n",
+       "      <td>American Airlines</td>\n",
+       "      <td>Santiago</td>\n",
+       "      <td>Miami</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2017-01-04 23:30:00</td>\n",
+       "      <td>226</td>\n",
+       "      <td>SCEL</td>\n",
+       "      <td>KMIA</td>\n",
+       "      <td>AAL</td>\n",
+       "      <td>2017-01-04 23:33:00</td>\n",
+       "      <td>226</td>\n",
+       "      <td>SCEL</td>\n",
+       "      <td>KMIA</td>\n",
+       "      <td>AAL</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>Miercoles</td>\n",
+       "      <td>I</td>\n",
+       "      <td>American Airlines</td>\n",
+       "      <td>Santiago</td>\n",
+       "      <td>Miami</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2017-01-05 23:30:00</td>\n",
+       "      <td>226</td>\n",
+       "      <td>SCEL</td>\n",
+       "      <td>KMIA</td>\n",
+       "      <td>AAL</td>\n",
+       "      <td>2017-01-05 23:28:00</td>\n",
+       "      <td>226</td>\n",
+       "      <td>SCEL</td>\n",
+       "      <td>KMIA</td>\n",
+       "      <td>AAL</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>Jueves</td>\n",
+       "      <td>I</td>\n",
+       "      <td>American Airlines</td>\n",
+       "      <td>Santiago</td>\n",
+       "      <td>Miami</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>68201</th>\n",
+       "      <td>2017-12-22 14:55:00</td>\n",
+       "      <td>400</td>\n",
+       "      <td>SCEL</td>\n",
+       "      <td>SPJC</td>\n",
+       "      <td>JAT</td>\n",
+       "      <td>2017-12-22 15:41:00</td>\n",
+       "      <td>400.0</td>\n",
+       "      <td>SCEL</td>\n",
+       "      <td>SPJC</td>\n",
+       "      <td>JAT</td>\n",
+       "      <td>22</td>\n",
+       "      <td>12</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>Viernes</td>\n",
+       "      <td>I</td>\n",
+       "      <td>JetSmart SPA</td>\n",
+       "      <td>Santiago</td>\n",
+       "      <td>Lima</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>68202</th>\n",
+       "      <td>2017-12-25 14:55:00</td>\n",
+       "      <td>400</td>\n",
+       "      <td>SCEL</td>\n",
+       "      <td>SPJC</td>\n",
+       "      <td>JAT</td>\n",
+       "      <td>2017-12-25 15:11:00</td>\n",
+       "      <td>400.0</td>\n",
+       "      <td>SCEL</td>\n",
+       "      <td>SPJC</td>\n",
+       "      <td>JAT</td>\n",
+       "      <td>25</td>\n",
+       "      <td>12</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>Lunes</td>\n",
+       "      <td>I</td>\n",
+       "      <td>JetSmart SPA</td>\n",
+       "      <td>Santiago</td>\n",
+       "      <td>Lima</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>68203</th>\n",
+       "      <td>2017-12-27 14:55:00</td>\n",
+       "      <td>400</td>\n",
+       "      <td>SCEL</td>\n",
+       "      <td>SPJC</td>\n",
+       "      <td>JAT</td>\n",
+       "      <td>2017-12-27 15:35:00</td>\n",
+       "      <td>400.0</td>\n",
+       "      <td>SCEL</td>\n",
+       "      <td>SPJC</td>\n",
+       "      <td>JAT</td>\n",
+       "      <td>27</td>\n",
+       "      <td>12</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>Miercoles</td>\n",
+       "      <td>I</td>\n",
+       "      <td>JetSmart SPA</td>\n",
+       "      <td>Santiago</td>\n",
+       "      <td>Lima</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>68204</th>\n",
+       "      <td>2017-12-29 14:55:00</td>\n",
+       "      <td>400</td>\n",
+       "      <td>SCEL</td>\n",
+       "      <td>SPJC</td>\n",
+       "      <td>JAT</td>\n",
+       "      <td>2017-12-29 15:08:00</td>\n",
+       "      <td>400.0</td>\n",
+       "      <td>SCEL</td>\n",
+       "      <td>SPJC</td>\n",
+       "      <td>JAT</td>\n",
+       "      <td>29</td>\n",
+       "      <td>12</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>Viernes</td>\n",
+       "      <td>I</td>\n",
+       "      <td>JetSmart SPA</td>\n",
+       "      <td>Santiago</td>\n",
+       "      <td>Lima</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>68205</th>\n",
+       "      <td>2017-12-31 14:55:00</td>\n",
+       "      <td>400</td>\n",
+       "      <td>SCEL</td>\n",
+       "      <td>SPJC</td>\n",
+       "      <td>JAT</td>\n",
+       "      <td>2017-12-31 15:04:00</td>\n",
+       "      <td>400.0</td>\n",
+       "      <td>SCEL</td>\n",
+       "      <td>SPJC</td>\n",
+       "      <td>JAT</td>\n",
+       "      <td>31</td>\n",
+       "      <td>12</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>Domingo</td>\n",
+       "      <td>I</td>\n",
+       "      <td>JetSmart SPA</td>\n",
+       "      <td>Santiago</td>\n",
+       "      <td>Lima</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>68206 rows × 18 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "Fecha-I      object\n",
-       "Vlo-I        object\n",
-       "Ori-I        object\n",
-       "Des-I        object\n",
-       "Emp-I        object\n",
-       "Fecha-O      object\n",
-       "Vlo-O        object\n",
-       "Ori-O        object\n",
-       "Des-O        object\n",
-       "Emp-O        object\n",
-       "DIA           int64\n",
-       "MES           int64\n",
-       "AÑO           int64\n",
-       "DIANOM       object\n",
-       "TIPOVUELO    object\n",
-       "OPERA        object\n",
-       "SIGLAORI     object\n",
-       "SIGLADES     object\n",
-       "dtype: object"
+       "                   Fecha-I Vlo-I Ori-I Des-I Emp-I              Fecha-O  \\\n",
+       "0      2017-01-01 23:30:00   226  SCEL  KMIA   AAL  2017-01-01 23:33:00   \n",
+       "1      2017-01-02 23:30:00   226  SCEL  KMIA   AAL  2017-01-02 23:39:00   \n",
+       "2      2017-01-03 23:30:00   226  SCEL  KMIA   AAL  2017-01-03 23:39:00   \n",
+       "3      2017-01-04 23:30:00   226  SCEL  KMIA   AAL  2017-01-04 23:33:00   \n",
+       "4      2017-01-05 23:30:00   226  SCEL  KMIA   AAL  2017-01-05 23:28:00   \n",
+       "...                    ...   ...   ...   ...   ...                  ...   \n",
+       "68201  2017-12-22 14:55:00   400  SCEL  SPJC   JAT  2017-12-22 15:41:00   \n",
+       "68202  2017-12-25 14:55:00   400  SCEL  SPJC   JAT  2017-12-25 15:11:00   \n",
+       "68203  2017-12-27 14:55:00   400  SCEL  SPJC   JAT  2017-12-27 15:35:00   \n",
+       "68204  2017-12-29 14:55:00   400  SCEL  SPJC   JAT  2017-12-29 15:08:00   \n",
+       "68205  2017-12-31 14:55:00   400  SCEL  SPJC   JAT  2017-12-31 15:04:00   \n",
+       "\n",
+       "       Vlo-O Ori-O Des-O Emp-O  DIA  MES   AÑO     DIANOM TIPOVUELO  \\\n",
+       "0        226  SCEL  KMIA   AAL    1    1  2017    Domingo         I   \n",
+       "1        226  SCEL  KMIA   AAL    2    1  2017      Lunes         I   \n",
+       "2        226  SCEL  KMIA   AAL    3    1  2017     Martes         I   \n",
+       "3        226  SCEL  KMIA   AAL    4    1  2017  Miercoles         I   \n",
+       "4        226  SCEL  KMIA   AAL    5    1  2017     Jueves         I   \n",
+       "...      ...   ...   ...   ...  ...  ...   ...        ...       ...   \n",
+       "68201  400.0  SCEL  SPJC   JAT   22   12  2017    Viernes         I   \n",
+       "68202  400.0  SCEL  SPJC   JAT   25   12  2017      Lunes         I   \n",
+       "68203  400.0  SCEL  SPJC   JAT   27   12  2017  Miercoles         I   \n",
+       "68204  400.0  SCEL  SPJC   JAT   29   12  2017    Viernes         I   \n",
+       "68205  400.0  SCEL  SPJC   JAT   31   12  2017    Domingo         I   \n",
+       "\n",
+       "                   OPERA  SIGLAORI SIGLADES  \n",
+       "0      American Airlines  Santiago    Miami  \n",
+       "1      American Airlines  Santiago    Miami  \n",
+       "2      American Airlines  Santiago    Miami  \n",
+       "3      American Airlines  Santiago    Miami  \n",
+       "4      American Airlines  Santiago    Miami  \n",
+       "...                  ...       ...      ...  \n",
+       "68201       JetSmart SPA  Santiago     Lima  \n",
+       "68202       JetSmart SPA  Santiago     Lima  \n",
+       "68203       JetSmart SPA  Santiago     Lima  \n",
+       "68204       JetSmart SPA  Santiago     Lima  \n",
+       "68205       JetSmart SPA  Santiago     Lima  \n",
+       "\n",
+       "[68206 rows x 18 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "data = pd.read_csv(Path().joinpath('data', 'dataset_SCL.csv'))\n",
-    "data.dtypes"
+    "print(data.dtypes)\n",
+    "data"
    ]
   },
   {
@@ -70,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "id": "8d71206e",
    "metadata": {},
    "outputs": [
@@ -114,8 +437,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "35cd3519",
+   "execution_count": 29,
+   "id": "5ed41299",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1713c1cc",
+   "id": "41593200",
    "metadata": {},
    "source": [
     "Como los valores que se convertirán a int vienen como str, no necesariamente se podrán convertir por lo que hay que chequear que sean correctos"
@@ -133,8 +456,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "0c4e6d9b",
+   "execution_count": 30,
+   "id": "756cd98c",
    "metadata": {},
    "outputs": [
     {
@@ -695,7 +1018,7 @@
        "61426               Grupo LATAM  Santiago        Concepcion  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -710,7 +1033,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dbe71b7b",
+   "id": "b0e8a7a1",
    "metadata": {},
    "source": [
     "Vemos que los casos que no pueden ser convertidos a str son porque tienen una letra al final, esto podría ser algún código de la aerolínea o simplemente un error a la hora de ingresar el dato, supondré que es esto último y que el número es el correcto al quitar la letra del final.\n",
@@ -720,8 +1043,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "8b72621b",
+   "execution_count": 31,
+   "id": "3827b246",
    "metadata": {},
    "outputs": [
     {
@@ -1282,7 +1605,7 @@
        "61426               Grupo LATAM  Santiago        Concepcion  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1294,17 +1617,39 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "820eaf79",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check Nan values in the whole dataset\n",
+    "data.isna().sum().sum()"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "463d0289",
+   "id": "0999d8e1",
    "metadata": {},
    "source": [
-    "El Nan que vimos antes es el único de todo el dataset así que se elimina es fila."
+    "El Nan que vimos antes es el único en todo el dataset, por lo que se elimina esa fila."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a99b774a",
+   "execution_count": 33,
+   "id": "e063a2f3",
    "metadata": {},
    "outputs": [],
    "source": [
