--- a/solution.ipynb
+++ b/solution.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 37,
    "id": "30dc9473",
    "metadata": {},
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
     "\n",
+    "import numpy as np\n",
     "import pandas as pd"
    ]
   },
@@ -438,7 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "5ed41299",
+   "id": "90d7eed2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -448,7 +449,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41593200",
+   "id": "d4c3373c",
    "metadata": {},
    "source": [
     "Como los valores que se convertirán a int vienen como str, no necesariamente se podrán convertir por lo que hay que chequear que sean correctos"
@@ -457,7 +458,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "756cd98c",
+   "id": "5c36180e",
    "metadata": {},
    "outputs": [
     {
@@ -1033,7 +1034,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0e8a7a1",
+   "id": "f5c6a37f",
    "metadata": {},
    "source": [
     "Vemos que los casos que no pueden ser convertidos a str son porque tienen una letra al final, esto podría ser algún código de la aerolínea o simplemente un error a la hora de ingresar el dato, supondré que es esto último y que el número es el correcto al quitar la letra del final.\n",
@@ -1044,7 +1045,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "3827b246",
+   "id": "8a60e1ee",
    "metadata": {},
    "outputs": [
     {
@@ -1619,7 +1620,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "820eaf79",
+   "id": "1a605188",
    "metadata": {},
    "outputs": [
     {
@@ -1640,7 +1641,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0999d8e1",
+   "id": "843e8ce8",
    "metadata": {},
    "source": [
     "El Nan que vimos antes es el único en todo el dataset, por lo que se elimina esa fila."
@@ -1649,11 +1650,84 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "e063a2f3",
+   "id": "cb866c7d",
    "metadata": {},
    "outputs": [],
    "source": [
     "data = data.dropna()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "375e99e3",
+   "metadata": {},
+   "source": [
+    "Chequeemos la consistencia de las columnas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "3246acd5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Días del mes: [1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27\n",
+      " 28 29 30 31]\n",
+      "\n",
+      "Días de la semana: ['Domingo' 'Jueves' 'Lunes' 'Martes' 'Miercoles' 'Sabado' 'Viernes']\n",
+      "\n",
+      "Meses: [1 2 3 4 5 6 7 8 9 10 11 12]\n",
+      "\n",
+      "Años: [2017 2018]\n",
+      "\n",
+      "Aerolíneas: ['Aerolineas Argentinas' 'Aeromexico' 'Air Canada' 'Air France' 'Alitalia'\n",
+      " 'American Airlines' 'Austral' 'Avianca' 'British Airways' 'Copa Air'\n",
+      " 'Delta Air' 'Gol Trans' 'Grupo LATAM' 'Iberia' 'JetSmart SPA' 'K.L.M.'\n",
+      " 'Lacsa' 'Latin American Wings' 'Oceanair Linhas Aereas'\n",
+      " 'Plus Ultra Lineas Aereas' 'Qantas Airways' 'Sky Airline'\n",
+      " 'United Airlines']\n",
+      "\n",
+      "Ciudades de origen: ['Santiago']\n",
+      "\n",
+      "Ciudades destino: ['Antofagasta' 'Arica' 'Asuncion' 'Atlanta' 'Auckland N.Z.' 'Balmaceda'\n",
+      " 'Bariloche' 'Bogota' 'Buenos Aires' 'Calama' 'Cancun' 'Castro (Chiloe)'\n",
+      " 'Cataratas Iguacu' 'Ciudad de Mexico' 'Ciudad de Panama' 'Cochabamba'\n",
+      " 'Concepcion' 'Copiapo' 'Cordoba' 'Curitiba, Bra.' 'Dallas'\n",
+      " 'Florianapolis' 'Guayaquil' 'Houston' 'Iquique' 'Isla de Pascua' 'La Paz'\n",
+      " 'La Serena' 'Lima' 'Londres' 'Los Angeles' 'Madrid' 'Melbourne' 'Mendoza'\n",
+      " 'Miami' 'Montevideo' 'Neuquen' 'Nueva York' 'Orlando' 'Osorno' 'Paris'\n",
+      " 'Pisco, Peru' 'Puerto Montt' 'Puerto Natales' 'Puerto Stanley'\n",
+      " 'Punta Arenas' 'Punta Cana' 'Punta del Este' 'Quito' 'Rio de Janeiro'\n",
+      " 'Roma' 'Rosario' 'San Juan, Arg.' 'Santa Cruz' 'Sao Paulo' 'Sydney'\n",
+      " 'Temuco' 'Toronto' 'Tucuman' 'Ushuia' 'Valdivia' 'Washington']\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Días del mes: {np.sort(data['DIA'].unique())}\\n\")\n",
+    "print(f\"Días de la semana: {np.sort(data['DIANOM'].unique())}\\n\")\n",
+    "print(f\"Meses: {np.sort(data['MES'].unique())}\\n\")\n",
+    "print(f\"Años: {np.sort(data['AÑO'].unique())}\\n\")\n",
+    "print(f\"Aerolíneas: {np.sort(data['OPERA'].unique())}\\n\")\n",
+    "print(f\"Ciudades de origen: {np.sort(data['SIGLAORI'].unique())}\\n\")\n",
+    "print(f\"Ciudades destino: {np.sort(data['SIGLADES'].unique())}\\n\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "20dfabdf",
+   "metadata": {},
+   "source": [
+    "Los días del mes, días de la semana y meses tienen todos los valores posibles. Además vemos que los datos son de 2017 y 2018.\n",
+    "\n",
+    "Las aerolíneas están correctas y no se dan repeticiones erróneas (por typos por ejemplo).\n",
+    "\n",
+    "Se ve que la única ciudad de origen es Santiago mientras que los destinos son diferentes ciudades en América, Europa y Australia."
    ]
   }
  ],
