--- a/solution.ipynb
+++ b/solution.ipynb
@@ -2,7 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
+   "id": "ecbd9706",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Selected Jupyter core packages...\n",
+      "IPython          : 8.4.0\n",
+      "ipykernel        : 6.15.1\n",
+      "ipywidgets       : 7.7.1\n",
+      "jupyter_client   : 7.3.4\n",
+      "jupyter_core     : 4.11.1\n",
+      "jupyter_server   : not installed\n",
+      "jupyterlab       : not installed\n",
+      "nbclient         : 0.6.6\n",
+      "nbconvert        : 6.5.0\n",
+      "nbformat         : 5.4.0\n",
+      "notebook         : 6.4.12\n",
+      "qtconsole        : 5.3.1\n",
+      "traitlets        : 5.3.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "!jupyter --version"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "id": "30dc9473",
    "metadata": {},
    "outputs": [],
@@ -15,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "id": "d354b959",
    "metadata": {},
    "outputs": [
@@ -48,7 +79,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Admin\\AppData\\Local\\Temp\\ipykernel_6916\\3529720353.py:1: DtypeWarning: Columns (1,6) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\Admin\\AppData\\Local\\Temp\\ipykernel_12776\\3529720353.py:1: DtypeWarning: Columns (1,6) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  data = pd.read_csv(Path().joinpath('data', 'dataset_SCL.csv'))\n"
      ]
     },
@@ -373,7 +404,7 @@
        "[68206 rows x 18 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "id": "8d71206e",
    "metadata": {},
    "outputs": [
@@ -438,8 +469,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "90d7eed2",
+   "execution_count": 7,
+   "id": "5ed41299",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,7 +480,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4c3373c",
+   "id": "41593200",
    "metadata": {},
    "source": [
     "Como los valores que se convertirán a int vienen como str, no necesariamente se podrán convertir por lo que hay que chequear que sean correctos"
@@ -457,8 +488,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "5c36180e",
+   "execution_count": 8,
+   "id": "756cd98c",
    "metadata": {},
    "outputs": [
     {
@@ -1019,7 +1050,7 @@
        "61426               Grupo LATAM  Santiago        Concepcion  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1034,7 +1065,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5c6a37f",
+   "id": "b0e8a7a1",
    "metadata": {},
    "source": [
     "Vemos que los casos que no pueden ser convertidos a str son porque tienen una letra al final, esto podría ser algún código de la aerolínea o simplemente un error a la hora de ingresar el dato, supondré que es esto último y que el número es el correcto al quitar la letra del final.\n",
@@ -1044,8 +1075,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "8a60e1ee",
+   "execution_count": 9,
+   "id": "3827b246",
    "metadata": {},
    "outputs": [
     {
@@ -1606,7 +1637,7 @@
        "61426               Grupo LATAM  Santiago        Concepcion  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1619,8 +1650,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "1a605188",
+   "execution_count": 10,
+   "id": "820eaf79",
    "metadata": {},
    "outputs": [
     {
@@ -1629,7 +1660,7 @@
        "1"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1641,7 +1672,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "843e8ce8",
+   "id": "0999d8e1",
    "metadata": {},
    "source": [
     "El Nan que vimos antes es el único en todo el dataset, por lo que se elimina esa fila."
@@ -1649,8 +1680,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "cb866c7d",
+   "execution_count": 11,
+   "id": "e063a2f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1659,7 +1690,57 @@
   },
   {
    "cell_type": "markdown",
-   "id": "375e99e3",
+   "id": "7b7be05c",
+   "metadata": {},
+   "source": [
+    "Finalmente, se puede convertir los strings a int."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "8aff1e2c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Fecha-I      datetime64[ns]\n",
+       "Vlo-I                 int32\n",
+       "Ori-I                string\n",
+       "Des-I                string\n",
+       "Emp-I                string\n",
+       "Fecha-O      datetime64[ns]\n",
+       "Vlo-O                 int32\n",
+       "Ori-O                string\n",
+       "Des-O                string\n",
+       "Emp-O                string\n",
+       "DIA                   Int64\n",
+       "MES                   Int64\n",
+       "AÑO                   Int64\n",
+       "DIANOM               string\n",
+       "TIPOVUELO            string\n",
+       "OPERA                string\n",
+       "SIGLAORI             string\n",
+       "SIGLADES             string\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['Vlo-I'] = data['Vlo-I'].astype(int)  # Cast str to int\n",
+    "data['Vlo-O'] = pd.to_numeric(data['Vlo-O'])  # Cast str to float first\n",
+    "data['Vlo-O'] = data['Vlo-O'].astype(int)  # Cast float to int\n",
+    "data.dtypes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "986b517d",
    "metadata": {},
    "source": [
     "Chequeemos la consistencia de las columnas"
@@ -1667,8 +1748,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "id": "3246acd5",
+   "execution_count": 16,
+   "id": "109c4856",
    "metadata": {},
    "outputs": [
     {
@@ -1719,16 +1800,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "20dfabdf",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cef9fc78",
    "metadata": {},
-   "source": [
-    "Los días del mes, días de la semana y meses tienen todos los valores posibles. Además vemos que los datos son de 2017 y 2018.\n",
-    "\n",
-    "Las aerolíneas están correctas y no se dan repeticiones erróneas (por typos por ejemplo).\n",
-    "\n",
-    "Se ve que la única ciudad de origen es Santiago mientras que los destinos son diferentes ciudades en América, Europa y Australia."
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
