--- a/solution.ipynb
+++ b/solution.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "ecbd9706",
+   "execution_count": 1,
+   "id": "7e26712a",
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "id": "30dc9473",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "d354b959",
    "metadata": {},
    "outputs": [
@@ -54,32 +54,39 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fecha-I      object\n",
-      "Vlo-I        object\n",
-      "Ori-I        object\n",
-      "Des-I        object\n",
-      "Emp-I        object\n",
-      "Fecha-O      object\n",
-      "Vlo-O        object\n",
-      "Ori-O        object\n",
-      "Des-O        object\n",
-      "Emp-O        object\n",
-      "DIA           int64\n",
-      "MES           int64\n",
-      "AÑO           int64\n",
-      "DIANOM       object\n",
-      "TIPOVUELO    object\n",
-      "OPERA        object\n",
-      "SIGLAORI     object\n",
-      "SIGLADES     object\n",
-      "dtype: object\n"
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 68206 entries, 0 to 68205\n",
+      "Data columns (total 18 columns):\n",
+      " #   Column     Non-Null Count  Dtype \n",
+      "---  ------     --------------  ----- \n",
+      " 0   Fecha-I    68206 non-null  object\n",
+      " 1   Vlo-I      68206 non-null  object\n",
+      " 2   Ori-I      68206 non-null  object\n",
+      " 3   Des-I      68206 non-null  object\n",
+      " 4   Emp-I      68206 non-null  object\n",
+      " 5   Fecha-O    68206 non-null  object\n",
+      " 6   Vlo-O      68205 non-null  object\n",
+      " 7   Ori-O      68206 non-null  object\n",
+      " 8   Des-O      68206 non-null  object\n",
+      " 9   Emp-O      68206 non-null  object\n",
+      " 10  DIA        68206 non-null  int64 \n",
+      " 11  MES        68206 non-null  int64 \n",
+      " 12  AÑO        68206 non-null  int64 \n",
+      " 13  DIANOM     68206 non-null  object\n",
+      " 14  TIPOVUELO  68206 non-null  object\n",
+      " 15  OPERA      68206 non-null  object\n",
+      " 16  SIGLAORI   68206 non-null  object\n",
+      " 17  SIGLADES   68206 non-null  object\n",
+      "dtypes: int64(3), object(15)\n",
+      "memory usage: 9.4+ MB\n",
+      "None\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Admin\\AppData\\Local\\Temp\\ipykernel_12776\\3529720353.py:1: DtypeWarning: Columns (1,6) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\Admin\\AppData\\Local\\Temp\\ipykernel_17076\\2847676661.py:1: DtypeWarning: Columns (1,6) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  data = pd.read_csv(Path().joinpath('data', 'dataset_SCL.csv'))\n"
      ]
     },
@@ -404,14 +411,14 @@
        "[68206 rows x 18 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "data = pd.read_csv(Path().joinpath('data', 'dataset_SCL.csv'))\n",
-    "print(data.dtypes)\n",
+    "print(data.info())\n",
     "data"
    ]
   },
@@ -420,12 +427,14 @@
    "id": "86f7972d",
    "metadata": {},
    "source": [
-    "Al parecer hay columnas con más de un tipo de dato, veamos cuales."
+    "Al parecer hay columnas con más de un tipo de dato, veamos cuales.\n",
+    "\n",
+    "*Obs: Los códigos de aeropuerto están en formato ICAO.*"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "8d71206e",
    "metadata": {},
    "outputs": [
@@ -469,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "5ed41299",
    "metadata": {},
    "outputs": [],
@@ -488,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "756cd98c",
    "metadata": {},
    "outputs": [
@@ -1050,7 +1059,7 @@
        "61426               Grupo LATAM  Santiago        Concepcion  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1075,7 +1084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "3827b246",
    "metadata": {},
    "outputs": [
@@ -1637,7 +1646,7 @@
        "61426               Grupo LATAM  Santiago        Concepcion  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1650,24 +1659,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "820eaf79",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1"
+       "Fecha-I      0\n",
+       "Vlo-I        0\n",
+       "Ori-I        0\n",
+       "Des-I        0\n",
+       "Emp-I        0\n",
+       "Fecha-O      0\n",
+       "Vlo-O        1\n",
+       "Ori-O        0\n",
+       "Des-O        0\n",
+       "Emp-O        0\n",
+       "DIA          0\n",
+       "MES          0\n",
+       "AÑO          0\n",
+       "DIANOM       0\n",
+       "TIPOVUELO    0\n",
+       "OPERA        0\n",
+       "SIGLAORI     0\n",
+       "SIGLADES     0\n",
+       "dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Check Nan values in the whole dataset\n",
-    "data.isna().sum().sum()"
+    "data.isna().sum()"
    ]
   },
   {
@@ -1680,7 +1707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "e063a2f3",
    "metadata": {},
    "outputs": [],
@@ -1690,7 +1717,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b7be05c",
+   "id": "71da000a",
    "metadata": {},
    "source": [
     "Finalmente, se puede convertir los strings a int."
@@ -1698,8 +1725,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "8aff1e2c",
+   "execution_count": 10,
+   "id": "82fcce9e",
    "metadata": {},
    "outputs": [
     {
@@ -1726,7 +1753,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1740,7 +1767,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "986b517d",
+   "id": "ed37c33a",
    "metadata": {},
    "source": [
     "Chequeemos la consistencia de las columnas"
@@ -1748,8 +1775,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "109c4856",
+   "execution_count": 11,
+   "id": "0cf69463",
    "metadata": {},
    "outputs": [
     {
@@ -1802,7 +1829,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cef9fc78",
+   "id": "4f75efe5",
    "metadata": {},
    "outputs": [],
    "source": []
