fix: Remove duplicated cell.

--- a/solution.ipynb
+++ b/solution.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c35199df",
+   "id": "45aa6f7d",
    "metadata": {},
    "source": [
     "# 1 Imports y configuraciones"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "6497d6a5",
+   "id": "f47c09d5",
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71d76e8e",
+   "id": "cbc59923",
    "metadata": {},
    "source": [
     "# 2. Exploratory Data Analysis\n",
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed5df585",
+   "id": "078a1aa0",
    "metadata": {},
    "source": [
     "## 2.2 Chequear y corregir data types"
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3882808e",
+   "id": "e69d19ea",
    "metadata": {},
    "source": [
     "De acuerdo a la documentación del desafío, las columnas son las siguientes:\n",
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "4971ba9a",
+   "id": "7a633a37",
    "metadata": {},
    "outputs": [
     {
@@ -1769,51 +1769,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "e063a2f3",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Fecha-I      datetime64[ns]\n",
-       "Vlo-I                 int32\n",
-       "Ori-I                string\n",
-       "Des-I                string\n",
-       "Emp-I                string\n",
-       "Fecha-O      datetime64[ns]\n",
-       "Vlo-O                 int32\n",
-       "Ori-O                string\n",
-       "Des-O                string\n",
-       "Emp-O                string\n",
-       "DIA                   Int64\n",
-       "MES                   Int64\n",
-       "AÑO                   Int64\n",
-       "DIANOM               string\n",
-       "TIPOVUELO            string\n",
-       "OPERA                string\n",
-       "SIGLAORI             string\n",
-       "SIGLADES             string\n",
-       "dtype: object"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data = data.dropna()\n",
-    "data['Vlo-I'] = data['Vlo-I'].astype(int)  # Cast str to int\n",
-    "data['Vlo-O'] = pd.to_numeric(data['Vlo-O'])  # Cast str to float first\n",
-    "data['Vlo-O'] = data['Vlo-O'].astype(int)  # Cast float to int\n",
-    "data.dtypes"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "f4a8c91c",
+   "id": "a64037d0",
    "metadata": {},
    "source": [
     "Finalmente, se puede convertir los strings a int."
@@ -1822,7 +1779,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "c62b55a4",
+   "id": "21b3d4f3",
    "metadata": {},
    "outputs": [
     {
@@ -1863,7 +1820,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cff08ccf",
+   "id": "bbcdbf81",
    "metadata": {},
    "source": [
     "## 2.3 Consistencia de los datos por columna\n",
@@ -1873,7 +1830,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "281b97f9",
+   "id": "9b534c42",
    "metadata": {},
    "outputs": [
     {
@@ -1925,7 +1882,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c748bc7e",
+   "id": "3eb49f46",
    "metadata": {},
    "source": [
     "- Los días del mes, días de la semana y meses tienen todos los valores posibles. Además vemos que los datos son de 2017 y 2018.\n",
@@ -1934,13 +1891,13 @@
     "\n",
     "Adicionalmente, uno esperaría que los datos de programación en general sean iguales a los de operación, excepto el tiempo que es lo que se busca predecir, por lo que se verán esas comparaciones a continuación.\n",
     "\n",
-    "### 2.3.2 Ciudad de origen programada vs de operación"
+    "### 2.3.2 Ciudad de origen programada vs operacional"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "c4b77e66",
+   "id": "b79b8661",
    "metadata": {},
    "outputs": [
     {
@@ -1961,7 +1918,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6023ffcb",
+   "id": "02ccd909",
    "metadata": {},
    "source": [
     "Todos los códigos de origen coinciden en programación y operación."
@@ -1969,16 +1926,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e225b9e",
+   "id": "427aa09f",
    "metadata": {},
    "source": [
-    "### 2.3.3 Ciudad de destino programada vs de "
+    "### 2.3.3 Ciudad de destino programada vs operacional"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "2353be88",
+   "execution_count": 20,
+   "id": "cd91787f",
    "metadata": {},
    "outputs": [
     {
@@ -1989,7 +1946,7 @@
        "dtype: Float64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2000,7 +1957,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1dbe257e",
+   "id": "7e18c291",
    "metadata": {},
    "source": [
     "En unos pocos casos se tiene que el código de destino es diferente entre programación y operación, veamos los códigos para las ciudades que tienen esta diferencia y la cantidad de códigos coincidentes y no coincidentes."
@@ -2008,8 +1965,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "e3a5d5d3",
+   "execution_count": 21,
+   "id": "4f0618b0",
    "metadata": {},
    "outputs": [
     {
@@ -2292,7 +2249,7 @@
        "0   KIAH  KIAD        Washington      1      False"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2308,7 +2265,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "066d88ba",
+   "id": "8017efc0",
    "metadata": {},
    "source": [
     "Una razón por la que puede haber incongruencia es en el caso que hayan datos incorrectos, o sea códigos que no corresponden a ningún aeropuerto así que veamos si es el caso."
@@ -2316,8 +2273,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "0379bc20",
+   "execution_count": 22,
+   "id": "4552254a",
    "metadata": {},
    "outputs": [
     {
@@ -2494,7 +2451,7 @@
        "[4 rows x 22 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2524,7 +2481,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f952d3e",
+   "id": "eac1a10f",
    "metadata": {},
    "source": [
     "Los únicos códigos que no corresponden son los de Temuco (SCQP) y Quito (SEQU), pero al investigar corroboré que estos códigos sí corresponden a esas ciudades ([ICAO Temuco](https://www.codigosinternacionales.com/icao/codigo-icao-del-aeropuerto-de-freire-temuco/), [ICAO Quito](https://airportcodes.aero/uio/quito-airport-code)), es un problema de la librería que no está actualizada.\n",
@@ -2538,8 +2495,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "bebb2a8b",
+   "execution_count": 23,
+   "id": "398e6364",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2555,8 +2512,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "f0305a6f",
+   "execution_count": 24,
+   "id": "f67dcb25",
    "metadata": {},
    "outputs": [
     {
@@ -2793,7 +2750,7 @@
        "12        Washington      1  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2813,7 +2770,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe641304",
+   "id": "fd71b878",
    "metadata": {},
    "source": [
     "Efectivamente ocurre que en algunos casos se cambia de aeropuerto para una misma ciudad y en otros casos se cambia de ciudad. Además vemos que la columna 'SIGLADES' corresponde a la ciudad de operación, no la programada, por lo que sería una columna redundante.\n",
@@ -2824,7 +2781,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7bcd6c76",
+   "id": "96ffd173",
    "metadata": {},
    "outputs": [],
    "source": []
