--- a/solution.ipynb
+++ b/solution.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "45aa6f7d",
+   "id": "8477b22d",
    "metadata": {},
    "source": [
     "# 1 Imports y configuraciones"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f47c09d5",
+   "id": "d98dcbd2",
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cbc59923",
+   "id": "7c8c3e15",
    "metadata": {},
    "source": [
     "# 2. Exploratory Data Analysis\n",
@@ -72,7 +72,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Admin\\AppData\\Local\\Temp\\ipykernel_15104\\2557340355.py:1: DtypeWarning: Columns (1,6) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\Admin\\AppData\\Local\\Temp\\ipykernel_14320\\2557340355.py:1: DtypeWarning: Columns (1,6) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  data = pd.read_csv(Path().joinpath('data', 'dataset_SCL.csv'))\n"
      ]
     }
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "078a1aa0",
+   "id": "00a00be8",
    "metadata": {},
    "source": [
     "## 2.2 Chequear y corregir data types"
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e69d19ea",
+   "id": "5bd9dbe2",
    "metadata": {},
    "source": [
     "De acuerdo a la documentación del desafío, las columnas son las siguientes:\n",
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "7a633a37",
+   "id": "f1f1f024",
    "metadata": {},
    "outputs": [
     {
@@ -1727,37 +1727,35 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Fecha-I      0\n",
-       "Vlo-I        0\n",
-       "Ori-I        0\n",
-       "Des-I        0\n",
-       "Emp-I        0\n",
-       "Fecha-O      0\n",
-       "Vlo-O        1\n",
-       "Ori-O        0\n",
-       "Des-O        0\n",
-       "Emp-O        0\n",
-       "DIA          0\n",
-       "MES          0\n",
-       "AÑO          0\n",
-       "DIANOM       0\n",
-       "TIPOVUELO    0\n",
-       "OPERA        0\n",
-       "SIGLAORI     0\n",
-       "SIGLADES     0\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fecha-I      0\n",
+      "Vlo-I        0\n",
+      "Ori-I        0\n",
+      "Des-I        0\n",
+      "Emp-I        0\n",
+      "Fecha-O      0\n",
+      "Vlo-O        1\n",
+      "Ori-O        0\n",
+      "Des-O        0\n",
+      "Emp-O        0\n",
+      "DIA          0\n",
+      "MES          0\n",
+      "AÑO          0\n",
+      "DIANOM       0\n",
+      "TIPOVUELO    0\n",
+      "OPERA        0\n",
+      "SIGLAORI     0\n",
+      "SIGLADES     0\n",
+      "dtype: int64\n"
+     ]
     }
    ],
    "source": [
     "# Check Nan values in the whole dataset\n",
-    "data.isna().sum()"
+    "print(data.isna().sum())\n",
+    "data = data.dropna()"
    ]
   },
   {
@@ -1770,7 +1768,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a64037d0",
+   "id": "52499b68",
    "metadata": {},
    "source": [
     "Finalmente, se puede convertir los strings a int."
@@ -1778,8 +1776,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "21b3d4f3",
+   "execution_count": 10,
+   "id": "8429f0ab",
    "metadata": {},
    "outputs": [
     {
@@ -1806,7 +1804,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1820,7 +1818,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bbcdbf81",
+   "id": "448b7abb",
    "metadata": {},
    "source": [
     "## 2.3 Consistencia de los datos por columna\n",
@@ -1829,8 +1827,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "9b534c42",
+   "execution_count": 11,
+   "id": "b8cc5937",
    "metadata": {},
    "outputs": [
     {
@@ -1882,7 +1880,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3eb49f46",
+   "id": "c6f2a32b",
    "metadata": {},
    "source": [
     "- Los días del mes, días de la semana y meses tienen todos los valores posibles. Además vemos que los datos son de 2017 y 2018.\n",
@@ -1896,8 +1894,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "b79b8661",
+   "execution_count": 12,
+   "id": "a1147e14",
    "metadata": {},
    "outputs": [
     {
@@ -1907,7 +1905,7 @@
        "dtype: Float64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1918,7 +1916,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "02ccd909",
+   "id": "0bb2bce2",
    "metadata": {},
    "source": [
     "Todos los códigos de origen coinciden en programación y operación."
@@ -1926,7 +1924,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "427aa09f",
+   "id": "c151444b",
    "metadata": {},
    "source": [
     "### 2.3.3 Ciudad de destino programada vs operacional"
@@ -1934,8 +1932,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "cd91787f",
+   "execution_count": 13,
+   "id": "cb5a8d24",
    "metadata": {},
    "outputs": [
     {
@@ -1946,7 +1944,7 @@
        "dtype: Float64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1957,7 +1955,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e18c291",
+   "id": "5fd35078",
    "metadata": {},
    "source": [
     "En unos pocos casos se tiene que el código de destino es diferente entre programación y operación, veamos los códigos para las ciudades que tienen esta diferencia y la cantidad de códigos coincidentes y no coincidentes."
@@ -1965,8 +1963,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "4f0618b0",
+   "execution_count": 14,
+   "id": "2d2eedca",
    "metadata": {},
    "outputs": [
     {
@@ -2249,7 +2247,7 @@
        "0   KIAH  KIAD        Washington      1      False"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2265,7 +2263,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8017efc0",
+   "id": "bf61e576",
    "metadata": {},
    "source": [
     "Una razón por la que puede haber incongruencia es en el caso que hayan datos incorrectos, o sea códigos que no corresponden a ningún aeropuerto así que veamos si es el caso."
@@ -2273,8 +2271,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "4552254a",
+   "execution_count": 15,
+   "id": "5402c33c",
    "metadata": {},
    "outputs": [
     {
@@ -2451,7 +2449,7 @@
        "[4 rows x 22 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2481,7 +2479,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eac1a10f",
+   "id": "98031ccd",
    "metadata": {},
    "source": [
     "Los únicos códigos que no corresponden son los de Temuco (SCQP) y Quito (SEQU), pero al investigar corroboré que estos códigos sí corresponden a esas ciudades ([ICAO Temuco](https://www.codigosinternacionales.com/icao/codigo-icao-del-aeropuerto-de-freire-temuco/), [ICAO Quito](https://airportcodes.aero/uio/quito-airport-code)), es un problema de la librería que no está actualizada.\n",
@@ -2495,8 +2493,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "398e6364",
+   "execution_count": 16,
+   "id": "381241a8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2512,8 +2510,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "f67dcb25",
+   "execution_count": 17,
+   "id": "c0a8f6cf",
    "metadata": {},
    "outputs": [
     {
@@ -2750,7 +2748,7 @@
        "12        Washington      1  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2770,7 +2768,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd71b878",
+   "id": "e93615f2",
    "metadata": {},
    "source": [
     "Efectivamente ocurre que en algunos casos se cambia de aeropuerto para una misma ciudad y en otros casos se cambia de ciudad. Además vemos que la columna 'SIGLADES' corresponde a la ciudad de operación, no la programada, por lo que sería una columna redundante.\n",
@@ -2781,7 +2779,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96ffd173",
+   "id": "f97485d7",
    "metadata": {},
    "outputs": [],
    "source": []
